--- a/src/gfx/convimg.yaml
+++ b/src/gfx/convimg.yaml
@@ -1,19 +1,32 @@
-palettes: c
-  - name: default_palette
-    images: automatic:
+palettes:
+  - name: global_palette
+    fixed-entries:
+      # black
+      - color: {index: 0, r: 0, g: 0, b: 0}
+      
+      # background color (to remove)
+      - color: {index: 1, r: 88, g: 94, b: 181}
+      
+      # green
+      - color: {index: 158, r: 158, g: 181, b: 86}
+      
+      # white
+      - color: {index: 255, r: 255, g: 255, b: 255}
+    images: automatic
 
 converts:
   - name: sprites
-    palette: default_palette
+    palette: global_palette
+    transparent-color-index: 0
     images:
-      - image1.png
-      - image2.png
-      - image3.png
+      - ../../media/shapes/Derek_and_Harum1_Sprites_shapes/towers/dart/*
+      - ../../media/shapes/Derek_and_Harum1_Sprites_shapes/bloons/non-regrow/non-camo/red/*
+
 
 outputs:
   - type: c
     include-file: gfx.h
     palettes:
-      - default_palette
+      - global_palette
     converts:
       - sprites
